apps/storage/rook-ceph/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: rook-ceph
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.27
